# banking-system

./: .gitignore  README.md  setup.sh
backend/: CMakeLists.txt
backend/include/: CMakeLists.txt  auth.h  database.h  routes.h  utils.h
backend/src/: auth.cpp  database.cpp  main.cpp  routes.cpp  utils.cpp
database/: init.js
frontend/: dashboard.html  history.html  index.html  login.html  transfer.html
frontend/css/: styles.css
frontend/js/: api.js  app.js  auth.js
